# passwd-gui

./: README.md  meson.build
data/: io.github.Rirusha.PasswdGUI.desktop.in  io.github.Rirusha.PasswdGUI.gresource.xml  io.github.Rirusha.PasswdGUI.metainfo.xml.in  meson.build
data/ui/: error-dialog.blp  main-window.blp
po/: POTFILES.in  passwd-gui.pot  update_pot.sh
scripts/: change-passwd.sh  meson.build
src/: application.vala  config.vapi  error-dialog.vala  main-window.vala  main.vala  meson.build  utils.vala
tests/: meson.build
